# singora

./: .gitignore  Cargo.toml  Makefile  README.md
apps/SigoraMenuBar/: Package.swift  README.md
apps/SigoraMenuBar/SigoraMenuBar/: ApprovalHeader.swift  CredentialImportView.swift  DesignSystem.swift  KeychainBridge.swift  LocalAuthenticationService.swift  Models.swift  PairApprovalView.swift  RiskBadge.swift  RuntimeAPIClient.swift  RuntimePanelView.swift  SigoraMenuBarApp.swift  TokenApprovalView.swift
crates/sigora-cli/: Cargo.toml
crates/sigora-cli/src/: main.rs
crates/sigora-crypto/: Cargo.toml
crates/sigora-crypto/src/: lib.rs
crates/sigora-proto/: Cargo.toml
crates/sigora-proto/src/: lib.rs
crates/sigora-store/: Cargo.toml
crates/sigora-store/src/: lib.rs
crates/sigorad-core/: Cargo.toml
crates/sigorad-core/src/: lib.rs
crates/sigorad-server/: Cargo.toml
crates/sigorad-server/src/: main.rs
docs/: README.md  architecture.md  implementation-strategy.md  v1-implementation-notes.md  v1-mvp-spec.md  vision-and-roadmap.md
scripts/e2e/: README.md  lib.sh  run.sh  test_pair_approve.sh  test_pair_deny.sh  test_pair_timeout.sh  test_token_allow.sh  test_token_challenge_approve.sh  test_token_deny.sh  test_token_expired_session.sh  test_token_revoked_session.sh  test_token_timeout.sh  test_token_unknown_session.sh
